# PasswordManager

./: .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025-03-11_2236_9228e336fe84.py
src/: bootstrap.py  errors.py  main.py  settings.py
src/containers/: app.py  database.py  repositories.py  services.py
src/containers_dishka/: core.py  database.py  repositories.py  services.py
src/databases/postgres/: client.py  constants.py  uow.py
src/databases/postgres/orm/: __init__.py  base.py  password.py
src/models/: base.py  service_password.py
src/repositories/: __init__.py  base.py  password.py
src/services/: __init__.py
src/services/password/: dto.py  service.py  utils.py
src/transport/rest/: __init__.py  annotations.py  base_schema.py  depends.py  errors.py  setup.py  setup_entrypoints.py  setup_errors.py  utils.py
src/transport/rest/middlewares/: error_handler.py
src/transport/rest/routers/password/: handlers.py  schemas.py
tests/: conftest.py  docker-compose.yml  factories.py
tests/transport/rest/handlers/password/: test_create_service_password_handler.py  test_get_service_password_handler.py  test_search_services_passwords_handler.py
